Fix CSS for iPad.
iPad does not seem to handle rex lengths.
iPad aspect ratio makes horizontal text too big to lay out correctly.

--- a/metronome.css
+++ b/metronome.css
@@ -10,7 +10,7 @@ body {
 
 @media (min-aspect-ratio: 1/1) {
   :root {
-    font-size: 6vh;
+    font-size: 4vh;
   }
 
   body {
@@ -35,9 +35,9 @@ button {
   flex: 1;
   justify-content: center;
   align-items: center;
-  padding: 0rex;
-  border: 0.3rex;
-  border-radius: 2.5rex;
+  padding: 0ex;
+  border: 0.3ex;
+  border-radius: 2.0ex;
   border-color: hsl(0, 0%, 0%);
   border-style: solid;
   touch-action: manipulation;
